--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=solrj-spring
 
 # in docker
-# cli.solrhostname=solr
-cli.solrhostname=localhost
+cli.solrhostname=solr
+# on host
+# cli.solrhostname=localhost
 cli.solrhostport=8983
 cli.solrcollection=domains
 
